<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/white">

    <TextView
        android:id="@+id/bienvenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="190dp"
        android:text="@string/bienvenue"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="@string/choix"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/bienvenu"
        app:layout_constraintTop_toBottomOf="@+id/bienvenu" />

    <Button
        android:id="@+id/etud"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/blue"
        android:text="@string/etud"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/proff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bienvenu" />




    <Button
        android:id="@+id/proff"
        android:layout_width="220dp"
        android:layout_height="0dp"
        android:layout_marginBottom="222dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:text="@string/prof"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etud" />


</androidx.constraintlayout.widget.ConstraintLayout>