<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_prof">


    <ImageView
        android:contentDescription="@null"
        android:id="@+id/teacher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:srcCompat="@drawable/teacher" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/teacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="47dp"
        android:autofillHints="username"
        android:drawableLeft="@drawable/user_icone"
        android:drawableTint="@color/hint"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:outlineSpotShadowColor="@color/blue"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacher" />

    <EditText
        android:id="@+id/password"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="password"
        android:drawableLeft="@drawable/password_icone"
        android:drawableTint="@color/hint"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toTopOf="@id/button1"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <Button
        android:id="@+id/button1"
        android:layout_width="193dp"
        android:layout_height="52dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/blue"
        android:text="Don't have an account yet? Register now "
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/button2"
        android:layout_width="193dp"
        android:layout_height="52dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/blue"
        android:text="@string/button2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>